# worldcup-2026-prediction-research

./: .env.example  .gitignore  README.en.md  README.es.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/api/: jest.config.cjs  package.json  tsconfig.json
apps/web/: package.json  tsconfig.json
apps/worker/: pyproject.toml
apps/worker/src/sprp_worker/: __init__.py  backfill.py  backtest.py  batch_pipeline.py  collect_statsbomb.py  fuse_current.py  metrics.py  optimize.py  polymarket_snapshot.py  recent_experiment.py  settle.py  settle_batch.py  statsbomb.py
apps/worker/tests/: test_backfill.py  test_backtest.py  test_batch_pipeline.py  test_fuse_current.py  test_metrics.py  test_optimize.py  test_polymarket_snapshot.py  test_settle.py  test_statsbomb.py
data/backfill/: fused-out-of-sample-report.json  recent-form-experiment.json
data/evaluations/: fused-observations.json
data/manifests/: active-fused-samples.json
data/processed/: statsbomb-international-xg.json
data/reports/: canada-morocco-fused.json  fused-650891.json  fused-654628.json  fused-654635.json  fused-658265.json  fused-658273.json  fused-662081.json  fused-665669.json  fused-665674.json  statistical-baseline-v1.json  statistical-optimized-v2.json
data/snapshots/: polymarket-650891.json  polymarket-654628.json  polymarket-654635.json  polymarket-658265.json  polymarket-658273.json  polymarket-662081.json  polymarket-665669.json  polymarket-665674.json
docs/: architecture.md  model-validation.md  roadmap.md
(+196 files in other folders)
