[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sprp-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy>=2.2", "pandas>=2.2", "scipy>=1.15", "pydantic>=2.11"]

[project.scripts]
sprp-collect-statsbomb = "sprp_worker.collect_statsbomb:main"
sprp-backtest = "sprp_worker.backtest:main"
sprp-collect-polymarket = "sprp_worker.polymarket_snapshot:main"
sprp-fuse-current = "sprp_worker.fuse_current:main"
sprp-optimize = "sprp_worker.optimize:main"
sprp-settle = "sprp_worker.settle:main"
sprp-batch = "sprp_worker.batch_pipeline:main"
sprp-settle-batch = "sprp_worker.settle_batch:main"
sprp-backfill = "sprp_worker.backfill:main"
sprp-recent-experiment = "sprp_worker.recent_experiment:main"

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.11", "mypy>=1.15"]

[tool.hatch.build.targets.wheel]
packages = ["src/sprp_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
